RESOLVED FIXED46857
Assertion then crash closing WebKit2 window with accelerated compositing in
https://bugs.webkit.org/show_bug.cgi?id=46857
Summary Assertion then crash closing WebKit2 window with accelerated compositing in
Simon Fraser (smfr)
Reported 2010-09-29 17:01:18 PDT
There's an assertion then crash in WebPage::changeAcceleratedCompositingMode() when closing a WebKit2 window that uses accelerated compositing.
Attachments
Patch (2.88 KB, patch)
2010-09-29 17:07 PDT, Simon Fraser (smfr)
andersca: review+
Simon Fraser (smfr)
Comment 1 2010-09-29 17:01:26 PDT
Simon Fraser (smfr)
Comment 2 2010-09-29 17:07:09 PDT
Simon Fraser (smfr)
Comment 3 2010-09-29 17:23:16 PDT
Note You need to log in before you can comment on or make changes to this bug.